# guardianlens

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  CONTEXT_FINAL.md  CONTEXT_UI.md  DASHBOARD_DESIGN_FINAL.md  Dockerfile  README.md  docker-compose.yaml  guardianlens_alert_history_new_vs_seen.html  guardianlens_dashboard_v2_clickable_alerts.html  guardianlens_demo.ipynb  guardianlens_quadratic_layout_mockup.html  guardlens_dashboard_v2_redesign.html  guardlens_final_implemented_design.html  guardlens_final_no_duplication.html  guardlens_minimal_clean.html  guardlens_safe_with_alert_history.html  guardlens_three_right_panel_states.html  kaggle_writeup.md  pyproject.toml  requirements.txt  run.py  yt_description.txt
app/: __init__.py  dashboard.py  serializers.py  server.py  state.py
app/static/: dashboard.css  dashboard.js
app/templates/: index.html
client/: pyproject.toml
client/src/guardlens_client/: __init__.py  capture.py  main.py  sender.py
configs/: default.yaml
demo/: discord_safe.html  discord_spam.html  tiktok_grooming.html  tiktok_safe.html  video_script.md
docs/: architecture.md  fine_tuning_plan.md  progress.md  weekly_plan.md
models/: Modelfile
notebooks/: 01_prepare_data.ipynb  02_discord_preview.ipynb  README.md  guardianlens_demo.ipynb
outputs/demo_html/: discord.html  minecraft_real.html  tiktok_dm.html
scripts/: eval_scenarios.py  record_animation.py  record_animation_hq.py  render_demo_script.py  render_discord.py  render_discord_html_scenes.py  render_minecraft_html_scenes.py  render_tiktok_html_scenes.py  scrape_test_images.py  seed_demo_db.py  smoke_test.py
src/guardlens/: __init__.py  alerts.py  analyzer.py  classifier.py  config.py  conversation_analyzer.py  conversation_store.py  database.py  demo.py  discord_chat.py  environment.py  escalation.py  monitor.py  ollama_utils.py  pipeline.py  privacy.py  prompts.py  schema.py  session_tracker.py  tools.py  utils.py
tests/: test_browser.py  test_conversation_analyzer.py  test_conversation_store.py  test_database.py  test_ollama_utils.py  test_pipeline.py  test_schema.py  test_serializers.py  test_server.py
